# ic-proe-2025

./: LICENSE  README.md  compile_commands.json
src/cpp/: CMakeLists.txt
src/cpp/app/: test_brkga.cpp
